doc: 更新api文档
